--- a/.github/workflows/terraform-ec2.yml
+++ b/.github/workflows/terraform-ec2.yml
@@ -13,6 +13,15 @@ jobs:
       - name: Checkout Code
         uses: actions/checkout@v4
 
+      - name: DEBUG – show workspace
+        run: |
+          echo "PWD:"
+          pwd
+          echo "WORKSPACE:"
+          echo $GITHUB_WORKSPACE
+          echo "FILES:"
+          ls -la
+
       # 🔍 DEBUG STEP (VERY IMPORTANT)
       - name: Verify repo contents
         run: |
